# rtsp-video-server

./: CMakeLists.txt  CMakeSettings.json
include/: CameraUnicastServerMediaSubsession.hpp  Config.hpp  Transcoder.hpp
include/utils/: Logger.hpp
src/: CameraUnicastServerMediaSubsession.cpp  LiveCamFramedSource.cpp  LiveCameraRTSPServer.cpp  Transcoder.cpp  main.cpp
src/config/: ExtensionConfigLoaderFactory.cpp  YamlConfigLoader.cpp
